# kdev-tabnine

./: CMakeLists.txt  kdev-tabnine.kdev4  kdevtabnine.json  model.cpp  model.h  resultentry.cpp  resultentry.h  service.cpp  service.h  tabnineplugin.cpp  tabnineplugin.h  truncablestring.cpp  truncablestring.h
